# raygbiv_cpp

./: .clang-format  .gitignore  CMakeLists.txt
raygbiv_cpp/: CMakeLists.txt  aabb.cpp  aabb.h  aarect.cpp  aarect.h  argparse.hpp  box.h  bvh_node.h  camera.h  color.h  constant_medium.h  hittable.cpp  hittable.h  hittable_list.cpp  hittable_list.h  image_buffer.cpp  image_buffer.h  material.h  montecarlo.cpp  montecarlo.h  moving_sphere.h  onb.cpp  onb.h  pdf.h  perlin.h  ray.h  raygbiv_cpp.cpp  raygbiv_cpp.h  rtw_stb_image.h  rtweekend.h  scene.cpp  scene.h  sphere.cpp  sphere.h  texture.h  threadpool.h  vec3.h
